# IN12B_8digit_clock

./: .gitignore  CMakeLists.txt  in12b_8digit.c
